--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "~17.0.0",
+    "@angular/cdk": "17.2.2",
     "@angular/common": "~17.0.0",
     "@angular/compiler": "~17.0.0",
     "@angular/core": "~17.0.0",
